Improved Payconiq via Bancontact reliability

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -3245,12 +3245,11 @@
   "408b5a17-3902-4483-b9cb-38d581ad3b97": "Vierkant",
   "b460f9b2-ffd8-48c4-b4e0-57c360f0affc": "Horizontaal op donkere achtergrond",
   "7f7be6dc-a859-4f3c-af9f-bb24221aa21c": "Scan en betaal met Payconiq by Bancontact",
-  "c9eeb8e9-61f7-4ca0-a4e4-01681fc32245": "Of scan met een ondersteunende bank app",
+  "c9eeb8e9-61f7-4ca0-a4e4-01681fc32245": "Of scan met een bank app",
   "7e35e52f-d862-4775-b24e-394e20470880": "Betaal met Payconiq by Bancontact",
   "b3bdadbd-5c9c-461d-8607-6f9cd5c2640d": "Je hebt één van volgende apps nodig om te kunnen betalen: Payconiq by Bancontact, KBC Mobile, ING Banking, Belfius, BNP Paribas Fortis, Fintro, Hello Bank!, Argenta of Crelan.",
   "809b7c07-e6fb-4d65-806d-7ec52cc8b3b8": "Het lukt niet",
   "ab4cda2d-03fa-4e19-a4a5-5ec2fe0d7187": "Open de app",
-  "630a85b7-2e2a-4e94-a8a2-f77bd80b78ed": "Klik op de volgende pagina op 'Kies een andere app' als je met een andere app dan Payconiq by Bancontact wilt betalen.",
   "a4dde8e6-d0f7-4ad6-b880-cf5467771770": "Payconiq by Bancontact",
   "e8247764-d10a-4c54-97e2-acca397b8ac9": "Betaling in verwerking",
   "3db0fd13-4501-432a-ada6-7f48efea9fe3": "Wachten op betaalbevestiging...",
@@ -4753,7 +4752,7 @@
   "6b7035db-1427-49ac-8a60-973b72355a8d": "Sluit dit alleen als je zeker bent dat je niet hebt betaald! Anders moet je gewoon even wachten.",
   "4c1658ea-d89c-4634-9be5-e0a23febe2bb": "Ik heb nog niet betaald",
   "99f9efd3-4d2d-4fd8-845c-b690daed606a": "Het lukt niet",
-  "6f196b46-8ac6-4565-a954-5f68cb6c56f5": "Kijk na of je één van de apps bovenaan deze pagina hebt geïnstalleerd. Als je op een pagina terecht komt die zegt dat je de app niet hebt: sleep die pagina naar beneden tot er een grijze balk tevoorschijn komt, klik daar op 'Open'. Probeer eventueel opnieuw op een computer of selecteer een andere betaalmethode.",
+  "6f196b46-8ac6-4565-a954-5f68cb6c56f5": "Kijk na of je één van de apps bovenaan deze pagina hebt geïnstalleerd. Zorg dat je de Safari app gebruikt, en geen andere app. Probeer eventueel opnieuw op een computer (daar kan je de QR-code scannen) of selecteer een andere betaalmethode.",
   "cbc17197-a98b-4017-aab8-adab5ab38cff": "Kijk na of je één van de apps bovenaan deze pagina hebt geïnstalleerd. Probeer eventueel opnieuw op een computer (daar kan je de QR-code scannen) of selecteer een andere betaalmethode.",
   "2166f942-4fce-476f-adf2-d5803ff4ed16": "Probeer alleen opnieuw als je zeker bent dat je niet hebt betaald! Anders moet je gewoon even wachten.",
   "cffa7f10-50e3-4da2-946c-5c60fc3fa2cf": "Via overschrijving",
