--- a/shared/locales/src/machine-en.json
+++ b/shared/locales/src/machine-en.json
@@ -8767,10 +8767,6 @@
     "original": "Je hebt niet de juiste toegangsrechten om leden in te schrijven bij een andere organisatie.",
     "translation": "You do not have the correct access rights to register members with another organisation."
   },
-  "630a85b7-2e2a-4e94-a8a2-f77bd80b78ed": {
-    "original": "Klik op de volgende pagina op 'Kies een andere app' als je met een andere app dan Payconiq by Bancontact wilt betalen.",
-    "translation": "On the next page, click on 'Choose another app' if you want to pay with an app other than Payconiq by Bancontact."
-  },
   "6313a021-6795-4b7e-842c-f4574e433324": {
     "original": "Groepsgegevens",
     "translation": "Group data"
@@ -9768,8 +9764,8 @@
     "translation": "Don't save"
   },
   "6f196b46-8ac6-4565-a954-5f68cb6c56f5": {
-    "original": "Kijk na of je één van de apps bovenaan deze pagina hebt geïnstalleerd. Als je op een pagina terecht komt die zegt dat je de app niet hebt: sleep die pagina naar beneden tot er een grijze balk tevoorschijn komt, klik daar op 'Open'. Probeer eventueel opnieuw op een computer of selecteer een andere betaalmethode.",
-    "translation": "Check if you have installed one of the apps at the top of this page. If you end up on a page that says you don't have the app: scroll down that page until a grey bar appears, click on 'Open'. You can also try again on a computer or select another payment method."
+    "original": "Kijk na of je één van de apps bovenaan deze pagina hebt geïnstalleerd. Zorg dat je de Safari app gebruikt, en geen andere app. Probeer eventueel opnieuw op een computer (daar kan je de QR-code scannen) of selecteer een andere betaalmethode.",
+    "translation": "Check if you have one of the apps listed at the top of this page installed. Make sure you are using the Safari app, not a different one. You can also try again on a computer (there you can scan the QR code), or choose another payment method."
   },
   "6f258e1c-997c-461b-99ca-e9cc0020579d": {
     "original": "Je ontvangt dit bedrag binnenkort terug op jouw rekening.",
@@ -17572,8 +17568,8 @@
     "translation": "Client secret"
   },
   "c9eeb8e9-61f7-4ca0-a4e4-01681fc32245": {
-    "original": "Of scan met een ondersteunende bank app",
-    "translation": "Or scan with a supporting banking app"
+    "original": "Of scan met een bank app",
+    "translation": "Or scan with your banking app"
   },
   "ca02d25d-e6cb-459a-96f5-1006c046b647": {
     "original": "vragen",
