--- a/shared/locales/src/machine-fr.json
+++ b/shared/locales/src/machine-fr.json
@@ -8899,10 +8899,6 @@
     "original": "Je hebt niet de juiste toegangsrechten om leden in te schrijven bij een andere organisatie.",
     "translation": "Vous n’avez pas les droits d’accès nécessaires pour inscrire des membres auprès d’une autre organisation."
   },
-  "630a85b7-2e2a-4e94-a8a2-f77bd80b78ed": {
-    "original": "Klik op de volgende pagina op 'Kies een andere app' als je met een andere app dan Payconiq by Bancontact wilt betalen.",
-    "translation": "Sur la page suivante, cliquez sur « Choisir une autre application » si vous souhaitez payer avec une application autre que Payconiq by Bancontact."
-  },
   "6313a021-6795-4b7e-842c-f4574e433324": {
     "original": "Groepsgegevens",
     "translation": "Données du groupe"
@@ -9904,8 +9900,8 @@
     "translation": "Ne pas enregistrer"
   },
   "6f196b46-8ac6-4565-a954-5f68cb6c56f5": {
-    "original": "Kijk na of je één van de apps bovenaan deze pagina hebt geïnstalleerd. Als je op een pagina terecht komt die zegt dat je de app niet hebt: sleep die pagina naar beneden tot er een grijze balk tevoorschijn komt, klik daar op 'Open'. Probeer eventueel opnieuw op een computer of selecteer een andere betaalmethode.",
-    "translation": "Vérifiez si vous avez installé l’une des applications en haut de cette page. Si vous arrivez sur une page indiquant que vous n’avez pas l’application : faites défiler cette page vers le bas jusqu’à ce qu’une barre grise apparaisse, cliquez sur « Ouvrir ». Essayez éventuellement à nouveau sur un ordinateur ou sélectionnez un autre mode de paiement."
+    "original": "Kijk na of je één van de apps bovenaan deze pagina hebt geïnstalleerd. Zorg dat je de Safari app gebruikt, en geen andere app. Probeer eventueel opnieuw op een computer (daar kan je de QR-code scannen) of selecteer een andere betaalmethode.",
+    "translation": "Vérifiez si vous avez installé l'une des applications mentionnées en haut de cette page. Assurez-vous d'utiliser l'application Safari, et non une autre. Essayez éventuellement à nouveau sur un ordinateur (vous pouvez alors scanner le code QR) ou choisissez un autre moyen de paiement."
   },
   "6f258e1c-997c-461b-99ca-e9cc0020579d": {
     "original": "Je ontvangt dit bedrag binnenkort terug op jouw rekening.",
@@ -17812,8 +17808,8 @@
     "translation": "Client secret"
   },
   "c9eeb8e9-61f7-4ca0-a4e4-01681fc32245": {
-    "original": "Of scan met een ondersteunende bank app",
-    "translation": "Ou scannez avec une application bancaire compatible"
+    "original": "Of scan met een bank app",
+    "translation": "Ou scannez avec une application bancaire"
   },
   "ca02d25d-e6cb-459a-96f5-1006c046b647": {
     "original": "vragen",
