--- a/shared/locales/src/machine-en.json
+++ b/shared/locales/src/machine-en.json
@@ -1219,6 +1219,10 @@
     "original": "Groot tekstveld",
     "translation": "Large text field"
   },
+  "0d47541d-abf2-45b5-a06c-3a85b7fa3994": {
+    "original": "Je hebt geen toegangsrechten om inschrijvingen op te zetten voor activiteiten in deze periode (geen toegang tot werkjaar)",
+    "translation": "You do not have access rights to set up registrations for activities in this period (no access to the work year)"
+  },
   "0d4b25fe-6a3d-480b-86e8-e21c664a15ee": {
     "original": "bv. Bpost",
     "translation": "e.g. Bpost"
@@ -2218,6 +2222,10 @@
   "18444ea0-bbae-4acb-bf53-71df2badf2fb": {
     "original": "Indien er voldoende plaats is. Meerdere artikels worden in lijstweergave getoond.",
     "translation": "If there is enough space. Multiple articles are shown in list view."
+  },
+  "18530ea6-4c97-4fd8-af49-54ed7b812a59": {
+    "original": "Ander werkjaar",
+    "translation": "Other work year"
   },
   "18650de1-4791-4334-ac74-2ab6848f9a28": {
     "original": "Voeg alle inschrijvingen toe aan het mandje en reken in één keer af.",
@@ -10318,6 +10326,10 @@
   "752a87bb-4994-4a86-b03c-f8d91670bafd": {
     "original": "Demo ledenadministratie",
     "translation": "Demo member administration"
+  },
+  "753684e1-94aa-4663-a81c-9656a51283ae": {
+    "original": "Je kan deze groep niet naar een andere periode verplaatsen omdat de wachtlijst van deze groep gedeeld is met andere groepen.",
+    "translation": "You cannot move this group to another period because its waiting list is shared with other groups."
   },
   "75398f88-8d64-47e9-8d8f-627af69052db": {
     "original": "Toestemming verzamelen gevoelige gegevens",
@@ -19791,6 +19803,10 @@
     "original": "Het werkjaar dat je wilt instellen is nog niet gestart",
     "translation": "The work year you want to configure has not started yet."
   },
+  "e115a9d1-11a6-42b9-a781-c6ab9d8a4b9c": {
+    "original": "Dit werkjaar is vergrendeld, je kan er geen inschrijvingsgroepen meer verplaatsen",
+    "translation": "This work year is locked, you can no longer move registration groups in it"
+  },
   "e11ad49e-d853-464c-a951-d45b9549ec30": {
     "original": "Deze categorie is niet zichtbaar voor gewone leden",
     "translation": "This category is not visible to ordinary members"
@@ -21046,6 +21062,10 @@
   "efeed776-7b4a-4f06-b755-04b1c615ff2d": {
     "original": "Leeftijdsgroepen",
     "translation": "Age groups"
+  },
+  "eff21f4c-2d50-4553-9eb9-8a9e399f4124": {
+    "original": "Je hebt niet voldoende toegangsrechten",
+    "translation": "You do not have sufficient access rights"
   },
   "effd2b1f-01f6-46e0-a5af-488bcbd93f1d": {
     "original": "E-mailadres",
